--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   </ul>
                </div>
                <div class="slider-images">
-                  <img src="./image/Image2.png" alt="slider-images">
+                  <img src="./image/image2.PNG" alt="slider-images">
                </div>
             </div>
             <div class="projects-container__mobile">
