--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                <h3 class="online-control__title">online control</h3>
                <div class="camera-cntrl">
                   <div class="video-cntrl">
-                     <img class="video-cntrl-img" src="../icons/online_ctrl.svg" alt="icon">
+                     <img class="video-cntrl-img" src="../icons/online_ctrl.svg">
                   </div>
                </div>
             </div>
