add image index

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   </ul>
                </div>
                <div class="slider-images">
-                  <img src="" alt="slider-images">
+                  <img src="./image/slider-image.png" alt="slider-images">
                </div>
             </div>
             <div class="projects-container__mobile">
@@ -132,7 +132,7 @@
                </p>
                <div class="slider-images-mobile">
                   <div class="images-mobile-case">
-                     <img src="" class="images-mobile-img" alt="slider-images">
+                     <img src="./image/mobile-slider.png" class="images-mobile-img" alt="slider-images">
                   </div>
                   <ul class="project__item">
                      <li class="project__item-title">
