--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="video-play">
                <div class=video-go>
                   <div>
-                     <img src=" ../icons/Group 8.svg" alt="video-control" class="video-cntrl-go">
+                     <img src="./icons/button-play.svg" alt="video-control" class="video-cntrl-go">
                   </div>
                </div>
             </div>
@@ -235,7 +235,7 @@
             <h3 class="types-of-repair__title">TYPES OF REPAIR</h3>
             <div class="types-of-repair__icon">
                <div class="types-of-repair__icon-cover">
-                  <img src="../icons/Group repair 2.9.svg" alt="repair-icon" class="icon-after-title">
+                  <img src="./icons/types-icon.svg" alt="repair-icon" class="icon-after-title">
                </div>
             </div>
             <div class="types container">
@@ -362,7 +362,7 @@
                   <button class="button form__request">Call the measurer</button>
                </div>
                <div class="piggy">
-                  <div><img src="../icons/Group pig.svg" class="piggy-one" alt="icon piggy"></div>
+                  <div><img src="./icons/piggy-img.svg" class="piggy-one" alt="icon piggy"></div>
                   <p class="piggy__text">Help save 10 - 20% of the <br> cost of materials</p>
                </div>
             </div>
@@ -402,12 +402,12 @@
                   </div>
                   <div class="realized-projects__container-columnright">
                      <div class="column-left">
-                        <img src="../image/image left-top 5.png" class="projects-images-one" alt="projects-images">
-                        <img src="../image/image booton-left 5.png" class="projects-images-two" alt="projects-images">
+                        <img src="./image/style-img-lefttop 5.png" class="projects-images-one" alt="projects-images">
+                        <img src=".image/style-img-leftbottom5.png" class="projects-images-two" alt="projects-images">
                      </div>
                      <div class="column-right">
-                        <img src="../image/image top right 5.png" class="projects-images-three" alt="projects-images">
-                        <img src="../image/image bottom 5.png" class="projects-images-four" alt="projects-images">
+                        <img src="./image/style-img-righttop 5.png" class="projects-images-three" alt="projects-images">
+                        <img src="./image/style-img-rightbottom.png" class="projects-images-four" alt="projects-images">
                      </div>
                   </div>
                </div>
