--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <h3 class="clients-title">our clients</h3>
             <div class="types-of-repair-box">
                <div class="types-of-repair-icon">
-                  <img src="../icons/Group client 11.4.svg" alt="icon-hands" class="icon-after-title">
+                  <img src="./icons/style-img-hands.svg" alt="icon-hands" class="icon-after-title">
                </div>
             </div>
             <div class="clients-title-text-box">
