--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                <li class="clients-person-cover">
                   <div class="person-box">
                      <div>
-                        <img src="../image/person left 5.png" alt="person-foto" class="person-foto">
+                        <img src="./image/img-client-left.png" alt="person-foto" class="person-foto">
                      </div>
                      <div class="persons-title">Fedosova Maria Konstantinovna</div>
                   </div>
@@ -460,13 +460,13 @@
                   <div class="clients-button">
                      <div class="clients-button-line">
                         <div class="clients-button-line-icon">
-                           <img src="../icons/Group size clients 21.4.svg" alt="clients-icon" class="clients-icon">
+                           <img src="./icons/schedule-clients.svg" alt="clients-icon" class="clients-icon">
                         </div>
                         <div class="clients-button-text">40 m2</div>
                      </div>
                      <div class="clients-button-list">
                         <div class="clients-button-list-icon">
-                           <img src="../icons/Group list clietns .svg" alt="icon-list">
+                           <img src="./icons/calendar-clients.svg" alt="icon-list">
                         </div>
                         <div class="clients-button-text-two">48 DAYS</div>
                      </div>
@@ -475,7 +475,7 @@
                <li class="clients-person-cover">
                   <div class="person-box">
                      <div>
-                        <img src="../image/person center 6.png" alt="person-foto" class="person-foto">
+                        <img src="./image/img-client-center.png" alt="person-foto" class="person-foto">
                      </div>
                      <div class="persons-title">Afanasyev Sergey Alexandrovich</div>
                   </div>
@@ -495,13 +495,13 @@
                   <div class="clients-button">
                      <div class="clients-button-line">
                         <div class="clients-button-line-icon">
-                           <img src="../icons/Group size clients 21.4.svg" alt="clients-icon" class="clients-icon">
+                           <img src="./icons/schedule-clients.svg" alt="clients-icon" class="clients-icon">
                         </div>
                         <div class="clients-button-text">90 м2</div>
                      </div>
                      <div class="clients-button-list">
                         <div class="clients-button-list-icon">
-                           <img src="../icons/Group list clietns .svg" alt="icon-list">
+                           <img src="./icons/calendar-clients.svg" alt="icon-list">
                         </div>
                         <div class="clients-button-text-two">128 DAYS</div>
                      </div>
@@ -510,7 +510,7 @@
                <li class="clients-person-cover">
                   <div class="person-box">
                      <div>
-                        <img src="../image/person right 6.png" alt="person-foto" class="person-foto">
+                        <img src="./image/img-client-right.png" alt="person-foto" class="person-foto">
                      </div>
                      <div class="persons-title">Kiriev Egor Leonidovich</div>
                   </div>
@@ -530,13 +530,13 @@
                   <div class="clients-button">
                      <div class="clients-button-line">
                         <div class="clients-button-line-icon">
-                           <img src="../icons/Group size clients 21.4.svg" alt="clients-icon" class="clients-icon">
+                           <img src="./icons/schedule-clients.svg" alt="clients-icon" class="clients-icon">
                         </div>
                         <div class="clients-button-text">56 м2</div>
                      </div>
                      <div class="clients-button-list">
                         <div class="clients-button-list-icon">
-                           <img src="../icons/Group list clietns .svg" alt="icon-list">
+                           <img src="./icons/calendar-clients.svg" alt="icon-list">
                         </div>
                         <div class="clients-button-text-two">86 DAYS</div>
                      </div>
@@ -592,10 +592,10 @@
                   </div>
                   <div class="contacts-icons">
                      <div class="email-img">
-                        <img src="../icons/eemail.svg" alt="Icon mail">
+                        <img src="./icons/mail-img.svg" alt="Icon mail">
                      </div>
                      <div class="inst-img">
-                        <img src="../icons/Group instctc 4.svg" alt="Icon instagram">
+                        <img src="./icons/inst-img.svg" alt="Icon instagram">
                      </div>
                   </div>
                   <div class="contacts-map">
@@ -651,10 +651,10 @@
                </div>
                <div class="contacts-icons-mobile">
                   <div class="email-img-mobile">
-                     <img src="../icons/eemail.svg" alt="Icon mail">
+                     <img src="./icons/mail-img.svg" alt="Icon mail">
                   </div>
                   <div class="inst-img-mobile">
-                     <img src="../icons/Group instctc 4.svg" alt="Icon instagram">
+                     <img src="./icons/inst-img.svg" alt="Icon instagram">
                   </div>
                </div>
             </div>
