--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                         <img src="./icons/mail-img.svg" alt="Icon mail">
                      </div>
                      <div class="inst-img">
-                        <img src="./icons/inst-img.svg" alt="Icon instagram">
+                        <img src="./icons/img-inst-style.svg" alt="Icon instagram">
                      </div>
                   </div>
                   <div class="contacts-map">
