add img inst contact

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                         <img src="./icons/mail-img.svg" alt="Icon mail">
                      </div>
                      <div class="inst-img">
-                        <img src="./icons/img-inst-style.svg" alt="Icon instagram">
+                        <img src="./icons/style-imginstag.svg" alt="Icon instagram">
                      </div>
                   </div>
                   <div class="contacts-map">
@@ -654,7 +654,7 @@
                      <img src="./icons/mail-img.svg" alt="Icon mail">
                   </div>
                   <div class="inst-img-mobile">
-                     <img src="./icons/img-inst-style.svg" alt="Icon instagram">
+                     <img src="./icons/style-imginstag.svg" alt="Icon instagram">
                   </div>
                </div>
             </div>
