commit error correction

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="projects-container__mobile">
                <h2 class="projects-container__title">Completed <br>projects</h2>
-               <p class="projects-text">Only a small part of the work performed by our company is presented <br>on
+               <p class="projects-text">Only a small part of the work performed by our company is<br> presented on
                   the
                   site. For 14 years on in the construction <br> market we have made happy more than 1000 families
                </p>
@@ -172,15 +172,15 @@
             <div class="video-play">
                <div class=video-go>
                   <div>
-                     <img src="./icons/button-play.svg" alt="video-control" class="video-cntrl-go">
+                     <img src="./icons/mobile-button-svg.svg" alt="video-control" class="video-cntrl-go">
                   </div>
                </div>
             </div>
             <div class="video-line"></div>
             <div class="video__text">
-               At each facility, a camera is installed that broadcasts the progress of work on the<br> clock. At any
+               At each facility, a camera is installed that broadcasts the progress of<br> work on the clock. At any
                time,
-               you can go to our website and monitor the progress of work in <br>your apartment. You can watch the
+               you can go to our website and <br>monitor the progress of work in your apartment.<br> You can watch the
                live
                broadcast from one of our facilities!<br> Leave a request below and you will receive a link to the
                broadcast.
@@ -420,7 +420,8 @@
             <h2 class="realized-projects-title-mobile">
                We realize your<br> wildest fantasies
             </h2>
-            <div class="realized-projects-icon"></div>
+            <div class="realized-projects-icon"> <img src="" alt="">
+            </div>
          </div>
       </section>
 
@@ -441,105 +442,99 @@
 
             <ul class="clients-persons">
                <li class="clients-person-cover">
-                  <div class="person-box">
-                     <div>
-                        <img src="./image/img-client-left.png" alt="person-foto" class="person-foto">
+                  <div class="client__size-box">
+                     <div class="person-box">
+                        <div>
+                           <img src="./image/img-client-left.png" alt="person-foto" class="person-foto">
+                        </div>
+                        <div class="persons-title">Fedosova Maria Konstantinovna</div>
                      </div>
-                     <div class="persons-title">Fedosova Maria Konstantinovna</div>
+                     <div class="persons-text">
+                        I want to thank the guys for their work. We put your shower part in repair. I am very grateful
+                        that
+                        I
+                        referred to the repair as to my own. Great thanks I express the project to Georgia for its
+                        professionalismand<br> approach.<br><br> The repair process was turned out in terms, faster than
+                        anticipated.
+                        Team mobile and professional. Works performed qualitatively without comments. Quality satisfied.
+                        Prices democratic. I recommend these masters.
+                     </div>
                   </div>
-                  <div class="persons-text">
-                     I want to thank the guys for their work. We put your shower part in repair. I am very grateful
-                     that
-                     I
-                     referred to the repair as to my own. Great thanks I express the project to Georgia for its
-                     professionalism and approach. The repair process was turned out in terms, faster than
-                     anticipated.
-                     Team mobile and professional. Works performed qualitatively without comments. Quality satisfied.
-                     Prices democratic. I recommend these masters.
-                  </div>>
                   <div class="clients-button">
                      <div class="clients-button-line">
-                        <div class="clients-button-line-icon">
+                        <div>
                            <img src="./icons/schedule-clients.svg" alt="clients-icon" class="clients-icon">
                         </div>
-                        <div class="clients-button-text">40 m2</div>
+                        <div class="clients-button-text">40 м2</div>
                      </div>
-                     <div class="clients-button-list">
-                        <div class="clients-button-list-icon">
-                           <img src="./icons/calendar-clients.svg" alt="icon-list">
-                        </div>
-                        <div class="clients-button-text-two">48 DAYS</div>
-                     </div>
+                     <div><img src="./icons/calendar-clients.svg" alt="icon-list"></div>
+                     <div class="clients-button-text">48 DAYS</div>
                   </div>
                </li>
                <li class="clients-person-cover">
-                  <div class="person-box">
-                     <div>
-                        <img src="./image/img-client-center.png" alt="person-foto" class="person-foto">
+                  <div class="client__size-box">
+                     <div class="person-box">
+                        <div>
+                           <img src="./image/img-client-center.png" alt="person-foto" class="person-foto">
+                        </div>
+                        <div class="persons-title">Afanasyev Sergey Alexandrovich</div>
                      </div>
-                     <div class="persons-title">Afanasyev Sergey Alexandrovich</div>
+                     <div class="persons-text">
+                        I want to thank the guys for their work. We put your shower part in repair. I am very
+                        grateful
+                        that
+                        I
+                        referred to the repair as to my own. Great thanks I express the project
+                        to Georgia for its professionalism and<br> approach.<br><br>
+                        The repair process was turned out in terms, faster than anticipated. Team mobile and
+                        professional.
+                        Works performed qualitatively without comments. Quality satisfied. Prices democratic. I
+                        recommend
+                        these masters.
+                     </div>
                   </div>
-                  <div class="persons-text">
-                     I want to thank the guys for their work. We put your shower part in repair. I am very
-                     grateful
-                     that
-                     I
-                     referred to the repair as to my own. Great thanks I express the project
-                     to Georgia for its professionalism and approach.
-                     The repair process was turned out in terms, faster than anticipated. Team mobile and
-                     professional.
-                     Works performed qualitatively without comments. Quality satisfied. Prices democratic. I
-                     recommend
-                     these masters.
-                  </div>>
                   <div class="clients-button">
                      <div class="clients-button-line">
-                        <div class="clients-button-line-icon">
+                        <div>
                            <img src="./icons/schedule-clients.svg" alt="clients-icon" class="clients-icon">
                         </div>
                         <div class="clients-button-text">90 м2</div>
                      </div>
-                     <div class="clients-button-list">
-                        <div class="clients-button-list-icon">
-                           <img src="./icons/calendar-clients.svg" alt="icon-list">
-                        </div>
-                        <div class="clients-button-text-two">128 DAYS</div>
-                     </div>
+                     <div><img src="./icons/calendar-clients.svg" alt="icon-list"></div>
+                     <div class="clients-button-text">128 DAYS</div>
                   </div>
                </li>
                <li class="clients-person-cover">
-                  <div class="person-box">
-                     <div>
-                        <img src="./image/img-client-right.png" alt="person-foto" class="person-foto">
+                  <div class="client__size-box">
+                     <div class="person-box">
+                        <div>
+                           <img src="./image/img-client-right.png" alt="person-foto" class="person-foto">
+                        </div>
+                        <div class="persons-title">Kiriev Egor Leonidovich</div>
                      </div>
-                     <div class="persons-title">Kiriev Egor Leonidovich</div>
+                     <div class="persons-text">
+                        I want to thank the guys for their work. We put your shower part in repair. I am very
+                        grateful
+                        that
+                        I
+                        referred to the repair as to my own. Great thanks I express the project
+                        to Georgia for its professionalism and <br> approach. <br><br>
+                        The repair process was turned out in terms, faster than anticipated. Team mobile and
+                        professional.
+                        Works performed qualitatively without comments. Quality satisfied. Prices democratic. I
+                        recommend
+                        these masters.
+                     </div>
                   </div>
-                  <div class="persons-text">
-                     I want to thank the guys for their work. We put your shower part in repair. I am very
-                     grateful
-                     that
-                     I
-                     referred to the repair as to my own. Great thanks I express the project
-                     to Georgia for its professionalism and approach.
-                     The repair process was turned out in terms, faster than anticipated. Team mobile and
-                     professional.
-                     Works performed qualitatively without comments. Quality satisfied. Prices democratic. I
-                     recommend
-                     these masters.
-                  </div>>
                   <div class="clients-button">
                      <div class="clients-button-line">
-                        <div class="clients-button-line-icon">
+                        <div>
                            <img src="./icons/schedule-clients.svg" alt="clients-icon" class="clients-icon">
                         </div>
                         <div class="clients-button-text">56 м2</div>
                      </div>
-                     <div class="clients-button-list">
-                        <div class="clients-button-list-icon">
-                           <img src="./icons/calendar-clients.svg" alt="icon-list">
-                        </div>
-                        <div class="clients-button-text-two">86 DAYS</div>
-                     </div>
+                     <div><img src="./icons/calendar-clients.svg" alt="icon-list"></div>
+                     <div class="clients-button-text">86 DAYS</div>
                   </div>
                </li>
             </ul>
