--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="video-play">
                <div class=video-go>
                   <div>
-                     <img src="./icons/mobile-button-svg.svg" alt="video-control" class="video-cntrl-go">
+                     <img src="./icons/button-play.svg" alt="video-control" class="video-cntrl-go">
                   </div>
                </div>
             </div>
